Use PyPI version of deckz to avoid broken deps
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/m09/formations"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-deckz = {path= "../deckz", develop=true}
+deckz = "^2.6.0"
 Pygments = "^2.6.1"
 
 [build-system]
