--- a/eni/company-config.yml
+++ b/eni/company-config.yml
@@ -1,4 +1,4 @@
 company_logo: logo_eni
-company_logo_height: '1'
+company_logo_height: 1cm
 company_name: ENI
 company_website: https://www.eni-service.fr/
