rename to readable section names

--- a/eni/ml-vue-d-ensemble-1J/targets.yml
+++ b/eni/ml-vue-d-ensemble-1J/targets.yml
@@ -6,10 +6,10 @@
 
     - path: questions
 
-    - path: ia
+    - path: intelligence-artificielle
 
     - title: "Les mécanismes du Machine Learning"
-      path: ml
+      path: machine-learning
       excludes:
         - tp
 
@@ -28,11 +28,11 @@
         - rnn-keras
         - tp
 
-    - path: nlp
+    - path: natural-language-processing
 
-    - path: rl
+    - path: reinforcement-learning
 
-    - path: gan
+    - path: generative-adversarial-network
 
     - path: big-questions
 
