--- a/shared/latex/natural-language-processing/section.yml
+++ b/shared/latex/natural-language-processing/section.yml
@@ -1,4 +1,8 @@
 title: Le traitement du texte
+tags:
+  normal: intro, preproc, vectos
+  light: intro, preproc
+  tp: tp
 includes:
   - path: intro
     title: Natural Language Processing (NLP)
