premiere compilation de orsys/mmd

--- a/orsys/mmd/j1/natural-language-processing/section.yml
+++ b/orsys/mmd/j1/natural-language-processing/section.yml
@@ -15,6 +15,6 @@ includes:
   - title: Similarités
     path: similarity
   - title: Similarité et Recommandation de Textes
-    path: similarity-text-recommandation
+    path: similarity-text-reco
   - title: Travaux Pratique Recommandation de Texte
     path: tp-text-reco-system
