Fix targets.yml for MLB
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/new-mlb/targets.yml
+++ b/orsys/new-mlb/targets.yml
@@ -5,7 +5,7 @@
     - questions
     - tools
     - questions
-    - path: ml
+    - path: machine-learning
       excludes:
         - tp
     - questions
