--- a/orsys/mmd/j3/neural-networks/section.yml
+++ b/orsys/mmd/j3/neural-networks/section.yml
@@ -9,8 +9,8 @@ includes:
   - title: RNN avec Keras
     path: rnn-keras
   - path: questions
-  - title: "Travaux Pratiques : RNN"
-    path: tp-rnn
+  #- title: "Travaux Pratiques : RNN"
+  #  path: tp-rnn
 
   - title: Modèle à Attention
     path: attention-model
