--- a/orsys/mmd/j3/tf-keras-intro/section.yml
+++ b/orsys/mmd/j3/tf-keras-intro/section.yml
@@ -2,5 +2,7 @@ title: TensorFlow et Keras
 includes:
   - title: TensorFlow
     path: tf-intro
+  #- title: Régression linéaire en Tensorflow
+  #  path: tf-reg-lin
   - title: Keras
     path: keras-intro
