Use shared machine-learning and improve it
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mmd/targets.yml
+++ b/orsys/mmd/targets.yml
@@ -12,6 +12,9 @@
   sections:
     - title: Machine Learning
       path: machine-learning
+      excludes:
+        - data-preparation
+        - tp-data
 
     - title: Apprentissage supervisé
       path: supervised
